--- a/Lab 1/document.tex
+++ b/Lab 1/document.tex
@@ -38,7 +38,7 @@
 Таким же образом, соотношение $\sigma(n)=\sum_{\tiny d|n}d $ дает
 \newtheorem{corollary}{Следствие}
 \begin{corollary} \label{corollary1}
-	\textit{Если $ N $ положительное число, то}\[\sum_{n=1}^{N}\sigma(n)=\sum_{n=1}^{N}n\left[\frac{N}{n}\right].\] 
+	Если $ N $ положительное число, то \[\sum_{n=1}^{N}\sigma(n)=\sum_{n=1}^{N}n\left[\frac{N}{n}\right].\] 
 \end{corollary}
 Эти два последних следствия могут быть
 уточнены с помощью 
